= 0.83 / IN PROGRESS...

    * Added preliminary support for Mono. (Not guaranteed or tested well. Let us know what happens.)
    * Fixed issue #21 with migrations not working past version 9.
    
    Upgrade Notes:
    * Run the following against your database to ensure issue #21 is fixed.
      This will change the [schema_migrations].[version] column from [varchar] to [int].
      `ALTER TABLE [schema_migrations] ALTER COLUMN [version] [int] NOT NULL`

= 0.82 / 2011-04-12

    * Added support for post migration actions that plugins can use
	  to inject functionality that should run after a migration completes.
	  (This was added to support the new PersistentMigrate [pmigrate] command
	  in the dotnetmigrations-contrib project.)

= 0.81 / 2011-04-11

    * New 'seed' command that executes scripts in the .\seeds\ folder.

	* New 'setup' command that migrates a database to the latest version
	  and executes scripts in the seed folder.
	  
	  This is the same as running:
	  > db migrate myConnection
	  > db seed myConnection

= 0.80 / 2011-03-30

    * New sequential number 'seq_num' versioning strategy

    * Added support for a ##DNM:PROVIDER## token in migration scripts that is
      replaced with the connection string's provider name.

    * Added support for migration scripts without placeholders. When the script
      doesn't have any BEGIN_SETUP/END_SETUP/BEGIN_TEARDOWN/END_TEARDOWN tags
      then the entire script is assumed to be a Setup with no Teardown.

= 0.70 / 2010-08-28

	This release brings yet another significant rewrite. Building
	on the MEF integration and innovations of 0.6, many improvements
	have been made to make writing commands easier and safer.

	* New 'connections' command that provides a command line interface
	  for viewing, adding, editing and removing stored connection
	  strings in the config file.

	* Revamped help system that provides detailed info on the
	  usage of all commands, including custom commands.
